--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "animate.css": "^3.7.2",
+    "babel-plugin-import": "^1.13.0",
+    "bootstrap": "^4.5.2",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-manifest": "^2.2.31",
@@ -14,8 +16,13 @@
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-sharp": "^2.3.7",
+    "jquery": "^3.5.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.1.0",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
   },
