--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "animate.css": "^3.7.2",
     "babel-plugin-import": "^1.13.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "bootstrap": "^4.5.2",
     "compass": "^0.1.1",
     "gatsby": "^2.18.12",
@@ -17,6 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sass": "^2.3.13",
     "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-plugin-styled-components": "^3.3.12",
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-sharp": "^2.3.7",
     "jquery": "^3.5.1",
@@ -29,7 +31,8 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "resolve-url-loader": "^3.1.1"
+    "resolve-url-loader": "^3.1.1",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "gh-pages": "^2.2.0",
